priority sorting working

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       v-bind:options="options"
       v-bind:id="todo.id"
       v-on:remove="removeTodo(index)"
-      v-on:update-list="updateList(value, id)"
+      v-on:update-list="updateList"
       ></li>
     </ol>
   </div>
