--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 </head>
 <body>
   <h1>Focused Todo</h1>
-  <p>Welcome to your todo list, what makes it focused? You can only add ten tasks to the list, when you open the list tomorrow there will only be 5 items on the list. The five items with the lowest priority will be removed automatically. This forces you to really focus on what needs to be done each day, allowing you to add new items each day, but you must complete them! Be sure to keep your most important items at the top.</p>
   <div id="todoApp">
+    <h2 v-show="showAbout">Welcome to your todo list!</h2>
+    <p v-show="showAbout">What makes it focused? You can only add ten tasks to the list, when you open the list tomorrow there will only be 5 items on the list. The five items with the lowest priority will be removed automatically.</p><p v-show="showAbout">This forces you to really focus on what needs to be done each day, allowing you to add new items each day, but you must complete them! Be sure to keep your most important items at the top.</p>
     <input 
-      v-model="newTodoText"
-      v-on:keyup.enter="addNewTodo(false)"
-      placeholder="Add a todo"  
+    v-model="newTodoText"
+    v-on:keyup.enter="addNewTodo(false)"
+    placeholder="Add a todo"  
     >
     <div id="listContainer">
       <ul>
@@ -36,6 +37,7 @@
         ></li>
       </ul>
     </div>
+    <button v-on:click="toggleShowAbout">About</button>
   </div>
   <a href="https://www.natethedev.com/" target="_blank" rel="noopener"\>Created by Nate Mallison</a>
   <script src="scripts.js"></script>
