--- a/index.html
+++ b/index.html
@@ -16,39 +16,34 @@
 <body>
   <h1>Focused Todo</h1>
   <div id="todoApp">
+    <button v-on:click="toggleShowAbout">About</button>
     <transition name="fade">
-    <h2 v-show="showAbout">Welcome to your todo list!</h2>
+      <div v-if="showAbout">
+        <h2>Welcome to your todo list!</h2>
+        <p>What makes it focused? You can only add ten tasks to the list, when you open the list tomorrow there will only be 5 items on the list. The five items with the lowest priority will be removed automatically.</p>
+        <p>This forces you to really focus on what needs to be done each day, allowing you to add new items each day, but you must complete them! Be sure to keep your most important items at the top.</p>
+      </div>
     </transition>
-    <transition name="fade">
-      <p v-show="showAbout">What makes it focused? You can only add ten tasks to the list, when you open the list tomorrow there will only be 5 items on the list. The five items with the lowest priority will be removed automatically.</p>
-    </transition>
-    <transition name="fade">
-      <p v-show="showAbout">This forces you to really focus on what needs to be done each day, allowing you to add new items each day, but you must complete them! Be sure to keep your most important items at the top.</p>
-    </transition>
-    <transition-group name="slide">
       <input 
         v-model="newTodoText"
         v-on:keyup.enter="addNewTodo(false)"
         placeholder="Add a todo" 
-        v-bind:key="1" 
       >
-      <div id="listContainer" v-bind:key="2">
-        <ul>
+      <div id="listContainer">
+        <transition-group name="listTransitions" tag="ul">
           <li
-          is="todo-item"
-          v-for="(todo, index) in todos"
-          v-bind:key="todo.id"
-          v-bind:title="todo.title"
-          v-bind:options="options"
-          v-bind:id="todo.id"
-          v-on:remove="removeTodo(index)"
-          v-on:update-list="updateList"
+            is="todo-item"
+            v-for="(todo, index) in todos"
+            v-bind:key="todo.id"
+            v-bind:title="todo.title"
+            v-bind:options="options"
+            v-bind:id="todo.id"
+            v-on:remove="removeTodo(index)"
+            v-on:update-list="updateList"
           ></li>
-        </ul>
+        </transition-group>
       </div>
-      <button v-on:click="toggleShowAbout" v-bind:key="3">About</button>
-    </transition-group>
-  </div>
+    </div>
   <a href="https://www.natethedev.com/" target="_blank" rel="noopener"\>Created by Nate Mallison</a>
   <script src="scripts.js"></script>
 </body>
